# bubble-dizzy-redux

./: .clang-format  .clang-tidy  .coderabbit.yaml  .gitattributes  .gitignore  .gitmodules  .markdownlint.json  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  SECURITY.md  game.cpp  hello.cpp
.github/: dependabot.yml
.github/workflow/: code_style_check.yaml  pull_request.yaml
.github/workflows/: build_cmake.yaml  code_checker.yaml  code_style_check.yaml  codeql.yaml  pull_request.yaml  push.yaml
cmake/: ConfigureEngine.cmake
project/: icon.svg.import  project.godot  test.gd  test.gd.uid  test.tscn
project-3-5/: .gitignore  project.godot
project-3-5/scripts/: window_manager.gd
project-3-5/scripts/tap/: tap_data_extractor.gd
project-4-0/: project.godot
project-4-0/scripts/: window_manager.gd
project/scripts/: window_manager.gd  window_manager.gd.uid
project/scripts/imports/zx/: tap_data_extractor.gd  tap_data_extractor.gd.uid
src/engine/: .gitignore  CMakeLists.txt
src/engine/cmake/: ConfigureCompiler.cmake  ConfigureEngine.cmake  ConsoleApplication.cmake
src/engine/include/: core_inline.hpp
src/engine/sources/: CMakeLists.txt
src/engine/sources/core/: core.h.in  core.hpp.in  core_utils.cpp
src/engine/test/: stub.test.cpp
src/game/: CMakeLists.txt  hello.cpp
tools/: README.md
tools/builder/: check_code_format.sh  check_copyright_headers.py  check_copyright_headers.sh
tools/builder/copyright_headers/: full_header_c_like.txt  header_template_c_like.txt
